--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "css-scroll-snap-polyfill": "^0.1.2",
     "lodash": "^4.17.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
