--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "css-scroll-snap-polyfill": "^0.1.2",
+    "flickity-imagesloaded": "^2.0.0",
     "lodash": "^4.17.4",
     "prismic-dom": "^2.0.6",
     "prismic-javascript": "^1.5.0-beta.1",
