--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.4",
     "prismic-dom": "^2.0.6",
     "prismic-javascript": "^1.5.0-beta.1",
+    "shopify-buy": "^1.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
