--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "build": "node build/build.js",
-    "build:ga": "autotrack -o static/autotrack.custom.js -p cleanUrlTracker,urlChangeTracker,outboundLinkTracker,pageVisibilityTracker,maxScrollTracker"
+    "build:ga": "autotrack -o static/autotrack.custom.js -p cleanUrlTracker,urlChangeTracker,outboundLinkTracker,pageVisibilityTracker,maxScrollTracker",
+    "build:sitemap": "node build/sitemap/build-sitemap.js"
   },
   "dependencies": {
     "es6-object-assign": "^1.1.0",
@@ -78,6 +79,7 @@
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "sitemap-generator": "^8.1.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
